<resources>
    <string name="app_name">byteConversor</string>
    <string name="Convertir1">Convertir</string>
    <string name="Convertir2">Convertir</string>
    <string name="input">INPUT =</string>
    <string name="output">OUTPUT =</string>
    <string name="numero">Número entrada</string>
    <string name="numero2">Número salida</string>
    <string name="glider_hacker_emblem">Glider, hacker emblem</string>
    <string name="img">glider, hacker emblem</string>
    <string name="license">[MIT License] Alberto Pérez del Río</string>
</resources>